--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,10 +35,10 @@ jobs:
 
       - name: Package artifacts
         run: |
-          if (Test-Path output\framework-dependent.zip) { Remove-Item output\framework-dependent.zip }
-          if (Test-Path output\self-contained.zip) { Remove-Item output\self-contained.zip }
-          Compress-Archive -Path output\framework-dependent\* -DestinationPath output\framework-dependent.zip
-          Compress-Archive -Path output\self-contained\* -DestinationPath output\self-contained.zip
+          if (Test-Path output\yellowpoint-win-x64-framework-dependent.zip) { Remove-Item output\yellowpoint-win-x64-framework-dependent.zip }
+          if (Test-Path output\yellowpoint-win-x64-self-contained.zip) { Remove-Item output\yellowpoint-win-x64-self-contained.zip }
+          Compress-Archive -Path output\framework-dependent\* -DestinationPath output\yellowpoint-win-x64-framework-dependent.zip
+          Compress-Archive -Path output\self-contained\* -DestinationPath output\yellowpoint-win-x64-self-contained.zip
 
       - name: Upload artifact (framework-dependent)
         uses: actions/upload-artifact@v4
