--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,10 +28,10 @@ jobs:
         run: dotnet build -c Release --no-restore
 
       - name: Publish (framework-dependent)
-        run: dotnet publish .\YellowPoint.csproj -c Release -r win-x64 --self-contained false -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -o output/framework-dependent
+        run: dotnet publish .\YellowPoint.csproj -c Release -r win-x64 --self-contained false -p:PublishSingleFile=false -o output/framework-dependent
 
       - name: Publish (self-contained)
-        run: dotnet publish .\YellowPoint.csproj -c Release -r win-x64 --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -o output/self-contained
+        run: dotnet publish .\YellowPoint.csproj -c Release -r win-x64 --self-contained true -p:PublishSingleFile=false -o output/self-contained
 
       - name: Package artifacts
         run: |
