--- a/YellowPoint.csproj
+++ b/YellowPoint.csproj
@@ -3,10 +3,21 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net10.0-windows</TargetFramework>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>cursor.ico</ApplicationIcon>
+    
+    <!-- Assembly info -->
+    <AssemblyName>YellowPoint</AssemblyName>
+    <Product>YellowPoint</Product>
+    <Description>A cursor highlighter utility for Windows</Description>
+    <Version>1.0.0</Version>
+    
+    <!-- Optimize output -->
+    <DebugType>embedded</DebugType>
+    <EnableTrimAnalyzer>true</EnableTrimAnalyzer>
   </PropertyGroup>
 
   <ItemGroup>
